fix(action): add go-main-dir update action

--- a/.github/workflows/go-github.yaml
+++ b/.github/workflows/go-github.yaml
@@ -26,4 +26,4 @@ jobs:
         uses: ./
         with:
           image: ${{ env.IMAGE }}@${{ steps.docker_build.outputs.digest }}
-          context: ${{ env.CONTEXT }}
+          build-context: ${{ env.CONTEXT }}
