--- a/.github/workflows/go-google.yaml
+++ b/.github/workflows/go-google.yaml
@@ -26,6 +26,6 @@ jobs:
         uses: ./
         with:
           image: ${{ env.IMAGE }}@${{ steps.docker_build.outputs.digest }}
-          context: ${{ env.CONTEXT }}
+          build-context: ${{ env.CONTEXT }}
           workload-identity-provider: ${{ secrets.SLSA_WORKLOAD_IDENTITY_PROVIDER }}
           google-service-account: cosign-keyless@plattformsikkerhet-dev-496e.iam.gserviceaccount.com
