--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -24,5 +24,5 @@ jobs:
         uses: ./
         with:
           image: ${{ env.IMAGE }}@${{ steps.docker_build.outputs.digest }}
-          context: ${{ env.CONTEXT }}
+          build-context: ${{ env.CONTEXT }}
           key: ${{ env.KEY }}
