--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -28,5 +28,5 @@ jobs:
         uses: ./
         with:
           image: ${{ env.IMAGE }}@${{ steps.docker_build.outputs.digest }}
-          context: ${{ env.CONTEXT }}/maven
+          build-context: ${{ env.CONTEXT }}/maven
           key: ${{ env.KEY }}
