--- a/.github/workflows/no-ecosystem.yaml
+++ b/.github/workflows/no-ecosystem.yaml
@@ -26,4 +26,4 @@ jobs:
         uses: ./
         with:
           image: ${{ env.IMAGE }}@${{ steps.docker_build.outputs.digest }}
-          context: ${{ env.CONTEXT }}
+          build-context: ${{ env.CONTEXT }}
