remove(action): add missing id

--- a/action.yaml
+++ b/action.yaml
@@ -111,6 +111,7 @@ runs:
 
     - name: Generate SBOM
       if: ${{ inputs.byo-sbom == '' }}
+      id: generate-sbom
       uses: nais/sbom@main
       with:
         ecosystem: ${{ inputs.ecosystem }}
